Update icons and markdown

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
   {% include header.html %}
 </div>
 
-<div class="content-post">
+<div class="content-article">
   <div class="size margin">
-    {% include posts.html %}
+    {% include articles.html %}
   </div>
 </div>
